--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/output.css" rel="stylesheet" />
+    <link href="output.css" rel="stylesheet" />
     <title>todesktop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,7 +33,7 @@
       class="px-4 box-border gap-5 flex bg-white justify-between items-center shadow-md w-full z-10 sticky top-0"
     >
       <a href="#" id="brand" class="items-center flex justify-center">
-        <img src="/images/logo main.png" alt="logo" class="max-w-[60px]" />
+        <img src="logo main.png" alt="logo" class="max-w-[60px]" />
         <span class="text-lg font-medium capitalize">todesktop</span>
       </a>
       <section
@@ -163,5 +163,5 @@
       </section>
     </main>
   </body>
-  <script src="/src/script.js"></script>
+  <script src="script.js"></script>
 </html>
