--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="output.css" rel="stylesheet" />
-    <title>todesktop</title>
+    <title>Todesktop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,14 +26,14 @@
     </style>
   </head>
   <body
-    class="bg-gradient-to-br from-blue-100 via-orange-50 to-transparent h-[100vh]"
+    class="bg-gradient-to-br from-blue-50 via-yellow-50 to-transparent flex flex-col min-h-screen"
   >
     <!-- Nav Bar -->
     <nav
       class="px-4 box-border gap-5 flex bg-white justify-between items-center shadow-md w-full z-10 sticky top-0"
     >
       <a href="#" id="brand" class="items-center flex justify-center">
-        <img src="logo main.png" alt="logo" class="max-w-[60px]" />
+        <img src="/images/logo main.png" alt="logo" class="max-w-[60px]" />
         <span class="text-lg font-medium capitalize">todesktop</span>
       </a>
       <section
@@ -68,7 +68,7 @@
       </div>
     </nav>
     <!-- Overlay section -->
-    <div
+    <section
       class="fixed bg-amber-100 w-full h-full invisible opacity-0 transition-all duration-400 ease-in-out flex-col gap-5 lg:hidden"
     >
       <div class="m-auto justify-center items-center my-2">
@@ -83,12 +83,12 @@
         <a href="#" class="hover:bg-gray-50 capitalize block p-4 px-5">login</a>
       </div>
       <div class="border-b-amber-50 border-[1px]"></div>
-    </div>
-    <main>
+    </section>
+    <main class="flex-grow">
       <!-- hero section -->
       <section
         id="hero_section"
-        class="flex h-full w-full p-10 items-center flex-col gap-6 lg:w-[60vw] m-auto"
+        class="flex w-full p-10 items-center flex-col gap-6 lg:w-[60vw] m-auto"
       >
         <article
           id="error_display"
@@ -162,6 +162,120 @@
         Optio, ducimus.
       </section>
     </main>
+    <footer class="bg-gray-800 text-white p-10">
+      <div class="container mx-auto">
+        <div
+          class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8 text-center sm:text-left"
+        >
+          <!-- Branding -->
+          <div class="flex flex-col items-center sm:items-start">
+            <a href="#" class="items-center flex">
+              <img
+                src="/images/logo main.png"
+                alt="logo"
+                class="max-w-[60px] mix-blend-screen"
+              />
+              <span class="text-lg font-medium capitalize">todesktop</span>
+            </a>
+            <p class="mt-4 text-gray-400 text-sm">
+              Convert your web app to a desktop app in minutes.
+            </p>
+          </div>
+
+          <!-- Links -->
+          <div>
+            <h3 class="font-bold uppercase mb-4">Product</h3>
+            <ul class="space-y-2 text-sm">
+              <li>
+                <a href="#" class="hover:text-amber-400 capitalize">Pricing</a>
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-400 capitalize">Docs</a>
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-400 capitalize"
+                  >Changelog</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-400 capitalize">Blogs</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Legal -->
+          <div>
+            <h3 class="font-bold uppercase mb-4">Legal</h3>
+            <ul class="space-y-2 text-sm">
+              <li>
+                <a href="#" class="hover:text-amber-400 capitalize"
+                  >Terms of Service</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-400 capitalize"
+                  >Privacy Policy</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <!-- Social -->
+          <div>
+            <h3 class="font-bold uppercase mb-4">Follow Us</h3>
+            <div class="flex gap-4 justify-center sm:justify-start">
+              <a href="#" class="hover:text-amber-400">
+                <svg
+                  class="w-6 h-6"
+                  fill="currentColor"
+                  viewBox="0 0 24 24"
+                  aria-hidden="true"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+              </a>
+              <a href="#" class="hover:text-amber-400">
+                <svg
+                  class="w-6 h-6"
+                  fill="currentColor"
+                  viewBox="0 0 24 24"
+                  aria-hidden="true"
+                >
+                  <path
+                    d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.71v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84"
+                  />
+                </svg>
+              </a>
+              <a href="#" class="hover:text-amber-400">
+                <svg
+                  class="w-6 h-6"
+                  fill="currentColor"
+                  viewBox="0 0 24 24"
+                  aria-hidden="true"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M12 2C6.477 2 2 6.477 2 12c0 4.418 2.865 8.165 6.839 9.49.5.092.682-.217.682-.482 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.031-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.203 2.398.1 2.651.64.7 1.03 1.595 1.03 2.688 0 3.848-2.338 4.695-4.566 4.943.359.308.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.001 10.001 0 0022 12c0-5.523-4.477-10-10-10z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Copyright -->
+        <div class="border-t border-gray-700 mt-8 pt-8 text-center">
+          <p class="text-sm text-gray-400">
+            &copy; 2025 Todesktop. All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
   <script src="script.js"></script>
 </html>
