--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       class="px-4 box-border gap-5 flex bg-white justify-between items-center shadow-md w-full z-10 sticky top-0"
     >
       <a href="#" id="brand" class="items-center flex justify-center">
-        <img src="/images/logo main.png" alt="logo" class="max-w-[60px]" />
+        <img src="logo main.png" alt="logo" class="max-w-[60px]" />
         <span class="text-lg font-medium capitalize">todesktop</span>
       </a>
       <section
@@ -171,7 +171,7 @@
           <div class="flex flex-col items-center sm:items-start">
             <a href="#" class="items-center flex">
               <img
-                src="/images/logo main.png"
+                src="logo main.png"
                 alt="logo"
                 class="max-w-[60px] mix-blend-screen"
               />
