--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   >
     <!-- Nav Bar -->
     <nav
-      class="px-4 box-border gap-5 flex bg-white justify-between items-center shadow-md w-full z-10 sticky top-0"
+      class="px-3 box-border gap-5 flex bg-white justify-between items-center shadow-md w-full z-10 sticky top-0"
     >
       <a href="#" id="brand" class="items-center flex justify-center">
         <img src="logo main.png" alt="logo" class="max-w-[60px]" />
@@ -47,7 +47,7 @@
         <a href="#" class="hover:text-amber-400">login</a>
       </section>
       <button
-        class="hidden px-4 py-1.5 capitalize text-center border lg:flex rounded-[5px] font-medium cursor-pointer gap-2 hover:bg-amber-600 items-center hover:border-amber-600 hover:text-white box-border hover:rounded-none"
+        class="hidden px-4 py-1.5 capitalize text-center border lg:flex rounded-[5px] font-medium cursor-pointer gap-2 hover:bg-yellow-200 items-center hover:border-amber-600 box-border hover:rounded-none hover:text-yellow-800 text-[17px]"
       >
         electron developer
         <span class="material-symbols-outlined">
@@ -92,11 +92,11 @@
       >
         <article
           id="error_display"
-          class="flex flex-row shadow w-fit items-center gap-1 font-medium bg-yellow-100 px-3 py-1 rounded-[5px] hover:shadow-md hover:cursor-pointer transition duration-300 hover:translate-y-[-4px] hover:rounded-none"
+          class="flex flex-row shadow box-border w-fit items-center gap-1 font-medium bg-yellow-100 border border-yellow-100 px-3 py-1 rounded-[5px] hover:shadow-md hover:cursor-pointer transition duration-300 hover:translate-y-[-4px] hover:rounded-none hover:bg-yellow-200 hover:border-amber-600 hover:border"
         >
-          <div
+          <divs
             class="circle border-yellow-600 w-[7px] h-[7px] rounded-lg border-2 bg-amber-400"
-          ></div>
+          ></divs>
           <div class="version text-yellow-600">v0.21.1 :</div>
           <div class="emet capitalize text-yellow-800">
             find-in-page bug fixes
@@ -122,6 +122,12 @@
             </span>
             <div class="text capitalize font-medium">java-Script</div>
           </div>
+          <div class="flex flex-row items-center gap-1">
+            <span class="material-symbols-outlined text-5xl">
+              code_blocks
+            </span>
+            <div class="text capitalize font-medium">Node-js</div>
+          </div>
         </article>
         <article class="flex flex-col gap-4 items-center">
           <div
@@ -138,12 +144,12 @@
         </article>
         <article class="flex flex-col lg:flex-row w-full gap-5">
           <button
-            class="capitalize bg-yellow-200 shadow font-bold w-full text-xl py-2 rounded-[5px] cursor-pointer hover:shadow-md hover:bg-amber-600 transition duration-300 text-yellow-800 hover:rounded-none hover:text-white"
+            class="capitalize bg-yellow-200 shadow font-bold w-full text-xl py-2 rounded-[5px] cursor-pointer hover:shadow-md box-border transition duration-300 text-yellow-800 hover:rounded-none hover:border-amber-600 hover:border"
           >
             downlaod now
           </button>
           <button
-            class="capitalize border-yellow-100 border bg-yellow-100 shadow font-bold w-full text-xl py-2 rounded-[5px] cursor-pointer hover:shadow-md hover:bg-amber-600 hover:border-amber-600 hover:rounded-none transition duration-300 text-yellow-800 lg:justify-between hover:text-white"
+            class="capitalize border-yellow-100 border bg-yellow-100 shadow font-bold w-full text-xl py-2 rounded-[5px] cursor-pointer hover:shadow-md hover:bg-yellow-200 hover:border-amber-600 hover:rounded-none transition duration-300 text-yellow-800 lg:justify-between"
           >
             read docx
           </button>
@@ -198,7 +204,7 @@
                 >
               </li>
               <li>
-                <a href="#" class="hover:text-amber-400 capitalize">Blogs</a>
+                <a href="#" class="hover:text-amber-400 capitalize ">Blogs</a>
               </li>
             </ul>
           </div>
@@ -250,7 +256,7 @@
                   />
                 </svg>
               </a>
-              <a href="#" class="hover:text-amber-400">
+              <a href="" class="hover:text-amber-400">
                 <svg
                   class="w-6 h-6"
                   fill="currentColor"
