Updated index.html by Muhammad Aadil Chanda

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                   >Changelog</a
                 >
               </li>
-              <li>
-                <a href="#" class="hover:text-amber-400 capitalize ">Blogs</a>
+              <li class="">
+                <a href="#" class="hover:text-amber-400 capitalize">Blogs</a>
               </li>
             </ul>
           </div>
@@ -230,7 +230,12 @@
           <div>
             <h3 class="font-bold uppercase mb-4">Follow Us</h3>
             <div class="flex gap-4 justify-center sm:justify-start">
-              <a href="#" class="hover:text-amber-400">
+              <a
+                href="#"
+                class="hover:text-amber-400"
+                aria-label="Facebook"
+                title="Facebook"
+              >
                 <svg
                   class="w-6 h-6"
                   fill="currentColor"
@@ -244,7 +249,12 @@
                   />
                 </svg>
               </a>
-              <a href="#" class="hover:text-amber-400">
+              <a
+                href="#"
+                class="hover:text-amber-400"
+                aria-label="Twitter"
+                title="Twitter"
+              >
                 <svg
                   class="w-6 h-6"
                   fill="currentColor"
@@ -256,7 +266,12 @@
                   />
                 </svg>
               </a>
-              <a href="" class="hover:text-amber-400">
+              <a
+                href="#"
+                class="hover:text-amber-400"
+                aria-label="GitHub"
+                title="GitHub"
+              >
                 <svg
                   class="w-6 h-6"
                   fill="currentColor"
